[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "advertools2"
author = "Elias Dabbas"
author-email = "eliasdabbas@gmail.com"
home-page = "https://github.com/liquidpeachy/advertools2"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "pandas",
    "pyasn1",
    "scrapy",
    "twython",
    "pyarrow",
]
description-file = 'README.rst'
keywords = "marketing advertising adwords bingads search-engine-marketing online-marketing digital-marketing digital-advertising keywords"

